--- a/challenge#1_AAMM.html
+++ b/challenge#1_AAMM.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Carga de icono a etiqueta de la página -->
-    <link rel="shortcut icon" href="./recursos/icono.ico">
+    <link rel="shortcut icon" href="icono.ico">
 
     <!-- Llamada del estilo css -->
     <link rel="stylesheet" href="estilo.css">
@@ -26,7 +26,7 @@
 
     <!-- Cabeza de la página en cual lleva el logo y el título -->
     <header>
-       <h1><img name="logo" class="logo" src="./recursos/Logo.PNG"> Challenge #1: Encriptador de Textos</h1>
+       <h1><img name="logo" class="logo" src="Logo.PNG"> Challenge #1: Encriptador de Textos</h1>
     </header>
 
     <!-- Div contenedor presenta el área para encriptar / desencriptar el texto -->
@@ -54,7 +54,7 @@
                 <!-- Segmentp derecho de la ágina la cual presentará una imagen al no contener información el área 
                 de texto encriptar/desencriptar  -->
                 <div name="previo" id="previo">
-                    <img src="./recursos/buscando.PNG">
+                    <img src="buscando.PNG">
                     <p class="advertencia" name="advertencia">Sin texto procesado...</p>
                 </div>
 
