--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- Segmentp derecho de la ágina la cual presentará una imagen al no contener información el área 
                 de texto encriptar/desencriptar  -->
                 <div name="previo" id="previo">
-                    <img src="buscando.PNG">
+                    <img src="buscando.png">
                     <p class="advertencia" name="advertencia">Sin texto procesado...</p>
                 </div>
 
