--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Cabeza de la página en cual lleva el logo y el título -->
     <header>
-       <h1><img name="logo" class="logo" src="Logo.PNG"> Challenge #1: Encriptador de Textos</h1>
+       <h1><img name="logo" class="logo" src="Logo.png"> Challenge #1: Encriptador de Textos</h1>
     </header>
 
     <!-- Div contenedor presenta el área para encriptar / desencriptar el texto -->
